tap/istio/02-istio-ingress/01-istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress # use the one I created earlier
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tap-gui.tap10istio.12factor.xyz"
