tap/istio/02-istio-ingress/02-istio-ingress-tap-gui.yaml
---
# Equivalent of httpproxies.projectcontour.io called tap-gui in ns tap-gui
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tap-gui-vs
  namespace: tap-gui
spec:
  hosts:
    - "tap-gui.tap10istio.12factor.xyz"
  gateways:
  - istio-ingress/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 7000
        host: server.tap-gui.svc.cluster.local 
          # Always use explicit fqdn version
---
